@@ -1,14 +1,16 @@
 package net.sourceforge.kolmafia.utilities;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.TimeZone;
 import java.util.WeakHashMap;
 import java.util.regex.Matcher;
@@ -16,17 +18,17 @@ import java.util.regex.Pattern;
 import net.sourceforge.kolmafia.RequestLogger;
 
 public class StringUtilities {
-  private static final HashMap<String, String> entityEncodeCache = new HashMap<String, String>();
-  private static final HashMap<String, String> entityDecodeCache = new HashMap<String, String>();
+  private static final HashMap<String, String> entityEncodeCache = new HashMap<>();
+  private static final HashMap<String, String> entityDecodeCache = new HashMap<>();
 
-  private static final HashMap<String, String> urlEncodeCache = new HashMap<String, String>();
-  private static final HashMap<String, String> urlDecodeCache = new HashMap<String, String>();
+  private static final HashMap<String, String> urlEncodeCache = new HashMap<>();
+  private static final HashMap<String, String> urlDecodeCache = new HashMap<>();
 
-  private static final HashMap<String, String> displayNameCache = new HashMap<String, String>();
-  private static final HashMap<String, String> canonicalNameCache = new HashMap<String, String>();
+  private static final HashMap<String, String> displayNameCache = new HashMap<>();
+  private static final HashMap<String, String> canonicalNameCache = new HashMap<>();
 
-  private static final HashMap<String, String> prepositionsMap = new HashMap<String, String>();
-  private static final WeakHashMap<String[], int[]> hashCache = new WeakHashMap<String[], int[]>();
+  private static final HashMap<String, String> prepositionsMap = new HashMap<>();
+  private static final WeakHashMap<String[], int[]> hashCache = new WeakHashMap<>();
 
   private static final Pattern NONINTEGER_PATTERN = Pattern.compile("[^0-9\\-]+");
 
@@ -38,27 +40,30 @@ public class StringUtilities {
               + "under|up|upon|with|within|without)\\b");
 
   private static final SimpleDateFormat DATE_FORMAT =
-      new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss zzz");
+      new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss zzz", Locale.ENGLISH);
 
   static {
     DATE_FORMAT.setTimeZone(TimeZone.getTimeZone("GMT"));
   }
 
-  public static final synchronized long parseDate(final String dateString) {
+  private StringUtilities() {}
+
+  public static synchronized long parseDate(final String dateString) {
     if (dateString != null) {
       try {
         return StringUtilities.DATE_FORMAT.parse(dateString).getTime();
       } catch (Exception e) {
+        return 0;
       }
     }
     return 0;
   }
 
-  public static final String formatDate(final long date) {
+  public static String formatDate(final long date) {
     return StringUtilities.formatDate(new Date(date));
   }
 
-  public static final synchronized String formatDate(final Date date) {
+  public static synchronized String formatDate(final Date date) {
     try {
       return StringUtilities.DATE_FORMAT.format(date);
     } catch (Exception e) {
@@ -66,28 +71,12 @@ public class StringUtilities {
     }
   }
 
-  public static final String getEncodedString(final byte[] bytes, final String encoding) {
-    try {
-      return new String(bytes, encoding);
-    } catch (UnsupportedEncodingException e) {
-      return "";
-    }
-  }
-
-  public static final byte[] getEncodedBytes(final String string, final String encoding) {
-    try {
-      return string.getBytes(encoding);
-    } catch (UnsupportedEncodingException e) {
-      return new byte[0];
-    }
-  }
-
   /** Returns the encoded-encoded version of the provided UTF-8 string. */
-  public static final String getEntityEncode(final String utf8String) {
+  public static String getEntityEncode(final String utf8String) {
     return StringUtilities.getEntityEncode(utf8String, true);
   }
 
-  public static final String getEntityEncode(String utf8String, final boolean cache) {
+  public static String getEntityEncode(String utf8String, final boolean cache) {
     if (utf8String == null) {
       return utf8String;
     }
@@ -118,11 +107,11 @@ public class StringUtilities {
   }
 
   /** Returns the UTF-8 version of the provided character entity string. */
-  public static final String getEntityDecode(final String entityString) {
+  public static String getEntityDecode(final String entityString) {
     return StringUtilities.getEntityDecode(entityString, true);
   }
 
-  public static final String getEntityDecode(String entityString, final boolean cache) {
+  public static String getEntityDecode(String entityString, final boolean cache) {
     if (entityString == null) {
       return entityString;
     }
@@ -145,7 +134,7 @@ public class StringUtilities {
   }
 
   /** Returns the URL-encoded version of the provided URL string. */
-  public static final String getURLEncode(final String url) {
+  public static String getURLEncode(final String url) {
     if (url == null) {
       return url;
     }
@@ -153,11 +142,7 @@ public class StringUtilities {
     String encodedURL = StringUtilities.urlEncodeCache.get(url);
 
     if (encodedURL == null) {
-      try {
-        encodedURL = URLEncoder.encode(url, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        encodedURL = url;
-      }
+      encodedURL = URLEncoder.encode(url, StandardCharsets.UTF_8);
 
       StringUtilities.urlEncodeCache.put(url, encodedURL);
     }
@@ -166,7 +151,7 @@ public class StringUtilities {
   }
 
   /** Returns the URL-decoded version of the provided URL string. */
-  public static final String getURLDecode(final String url) {
+  public static String getURLDecode(final String url) {
     if (url == null) {
       return url;
     }
@@ -174,11 +159,7 @@ public class StringUtilities {
     String encodedURL = StringUtilities.urlDecodeCache.get(url);
 
     if (encodedURL == null) {
-      try {
-        encodedURL = URLDecoder.decode(url, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        encodedURL = url;
-      }
+      encodedURL = URLDecoder.decode(url, StandardCharsets.UTF_8);
 
       StringUtilities.urlDecodeCache.put(url, encodedURL);
     }
@@ -187,7 +168,7 @@ public class StringUtilities {
   }
 
   /** Returns the display name for the provided canonical name. */
-  public static final String getDisplayName(String name) {
+  public static String getDisplayName(String name) {
     if (name == null) {
       return name;
     }
@@ -203,7 +184,7 @@ public class StringUtilities {
   }
 
   /** Returns the canonicalized name for the provided display name. */
-  public static final String getCanonicalName(String name) {
+  public static String getCanonicalName(String name) {
     if (name == null) {
       return null;
     }
@@ -226,7 +207,7 @@ public class StringUtilities {
    * @param names The map in which to search for the string
    * @param searchString The substring for which to search
    */
-  public static final List<String> getMatchingNames(final String[] names, String searchString) {
+  public static List<String> getMatchingNames(final String[] names, String searchString) {
     if (searchString == null) {
       searchString = "";
     }
@@ -234,7 +215,7 @@ public class StringUtilities {
     searchString = searchString.trim();
 
     boolean isExactMatch = searchString.startsWith("\"");
-    List<String> matchList = new ArrayList<String>();
+    List<String> matchList = new ArrayList<>();
 
     if (isExactMatch) {
       String fullString = StringUtilities.getCanonicalName(searchString);
@@ -319,7 +300,7 @@ public class StringUtilities {
     return hash;
   }
 
-  public static final boolean substringMatches(
+  public static boolean substringMatches(
       final String source, final String substring, final boolean checkBoundaries) {
     if (source == null) {
       return false;
@@ -341,7 +322,7 @@ public class StringUtilities {
     return !Character.isLetterOrDigit(source.charAt(index - 1));
   }
 
-  public static final boolean fuzzyMatches(final String sourceString, final String searchString) {
+  public static boolean fuzzyMatches(final String sourceString, final String searchString) {
     if (sourceString == null) {
       return false;
     }
@@ -403,7 +384,7 @@ public class StringUtilities {
     return ch != '#' && !Character.isLetterOrDigit(ch);
   }
 
-  public static final void insertBefore(
+  public static void insertBefore(
       final StringBuffer buffer, final String searchString, final String insertString) {
     int searchIndex = buffer.indexOf(searchString);
     if (searchIndex == -1) {
@@ -413,7 +394,7 @@ public class StringUtilities {
     buffer.insert(searchIndex, insertString);
   }
 
-  public static final void insertAfter(
+  public static void insertAfter(
       final StringBuffer buffer, final String searchString, final String insertString) {
     int searchIndex = buffer.indexOf(searchString);
     if (searchIndex == -1) {
@@ -423,12 +404,11 @@ public class StringUtilities {
     buffer.insert(searchIndex + searchString.length(), insertString);
   }
 
-  public static final String singleStringDelete(
-      final String originalString, final String searchString) {
+  public static String singleStringDelete(final String originalString, final String searchString) {
     return StringUtilities.singleStringReplace(originalString, searchString, "");
   }
 
-  public static final String singleStringReplace(
+  public static String singleStringReplace(
       final String originalString, final String searchString, final String replaceString) {
     if (originalString == null) {
       return null;
@@ -443,19 +423,16 @@ public class StringUtilities {
       return originalString;
     }
 
-    String buffer =
-        originalString.substring(0, lastIndex)
-            + replaceString
-            + originalString.substring(lastIndex + searchString.length());
-    return buffer;
+    return originalString.substring(0, lastIndex)
+        + replaceString
+        + originalString.substring(lastIndex + searchString.length());
   }
 
-  public static final void singleStringDelete(
-      final StringBuffer buffer, final String searchString) {
+  public static void singleStringDelete(final StringBuffer buffer, final String searchString) {
     StringUtilities.singleStringReplace(buffer, searchString, "");
   }
 
-  public static final void singleStringReplace(
+  public static void singleStringReplace(
       final StringBuffer buffer, final String searchString, final String replaceString) {
     int index = buffer.indexOf(searchString);
     if (index != -1) {
@@ -463,12 +440,11 @@ public class StringUtilities {
     }
   }
 
-  public static final String globalStringDelete(
-      final String originalString, final String searchString) {
+  public static String globalStringDelete(final String originalString, final String searchString) {
     return StringUtilities.globalStringReplace(originalString, searchString, "");
   }
 
-  public static final String globalStringReplace(
+  public static String globalStringReplace(
       final String originalString, final String searchString, final String replaceString) {
     if (originalString == null) {
       return null;
@@ -496,16 +472,16 @@ public class StringUtilities {
     return buffer.toString();
   }
 
-  public static final void globalStringReplace(
+  public static void globalStringReplace(
       final StringBuffer buffer, final String tag, final int replaceWith) {
     StringUtilities.globalStringReplace(buffer, tag, String.valueOf(replaceWith));
   }
 
-  public static final void globalStringDelete(final StringBuffer buffer, final String tag) {
+  public static void globalStringDelete(final StringBuffer buffer, final String tag) {
     StringUtilities.globalStringReplace(buffer, tag, "");
   }
 
-  public static final void globalStringReplace(
+  public static void globalStringReplace(
       final StringBuffer buffer, final String tag, String replaceWith) {
     if (buffer == null) {
       return;
@@ -530,8 +506,8 @@ public class StringUtilities {
     }
   }
 
-  public static final boolean isNumeric(String string) {
-    if (string == null || string.length() == 0) {
+  public static boolean isNumeric(String string) {
+    if (string == null || string.isEmpty()) {
       return false;
     }
 
@@ -552,7 +528,7 @@ public class StringUtilities {
     return true;
   }
 
-  public static final boolean isFloat(String string) {
+  public static boolean isFloat(String string) {
     if (string == null || string.length() == 0) {
       return false;
     }
@@ -586,84 +562,29 @@ public class StringUtilities {
     return true;
   }
 
-  public static final int parseInt(String string) {
-    return StringUtilities.parseIntInternal1(string, false);
-  }
-
-  public static final int parseIntInternal1(String string, boolean throwException)
-      throws NumberFormatException {
-    if (string == null) {
-      return 0;
-    }
-
-    // Remove commas anywhere in the string
-    string = StringUtilities.globalStringDelete(string, ",");
-
-    // Remove whitespace from front and end of string
-    string = string.trim();
-
-    // Remove + sign from start of string
-    if (string.startsWith("+")) {
-      string = string.substring(1);
-    }
-
-    if (string.length() == 0) {
-      return 0;
-    }
-
-    String tstring = string.substring(0, string.length() - 1);
-    char ch = string.charAt(string.length() - 1);
-    int multiplier = (ch == 'k' || ch == 'K') ? 1000 : (ch == 'm' || ch == 'M') ? 1000000 : 1;
-
-    if (multiplier > 1 && StringUtilities.isNumeric(tstring)) {
-      try {
-        return Integer.parseInt(tstring) * multiplier;
-      } catch (NumberFormatException e) {
-        RequestLogger.printLine(string + " is out of range, returning 0");
-        return 0;
-      }
-    }
-
-    if (StringUtilities.isNumeric(string)) {
-      try {
-        return Integer.parseInt(string);
-      } catch (NumberFormatException e) {
-        RequestLogger.printLine(string + " is out of range, returning 0");
-        return 0;
-      }
-    }
-
-    if (StringUtilities.isFloat(tstring)) {
-      return (int) (StringUtilities.parseFloat(tstring) * multiplier);
-    }
-
-    if (throwException) {
-      throw new NumberFormatException(string);
-    }
-
-    return StringUtilities.parseIntInternal2(string);
-  }
-
-  public static final int parseIntInternal2(String string) throws NumberFormatException {
-    string = NONINTEGER_PATTERN.matcher(string).replaceAll("");
-
-    if (string.length() == 0) {
-      return 0;
-    }
-
-    try {
-      return Integer.parseInt(string);
-    } catch (NumberFormatException e) {
-      RequestLogger.printLine(string + " is out of range, returning 0");
+  public static int parseInt(String string) {
+    long ret = StringUtilities.parseLongInternal1(string, false);
+    if ((Integer.MIN_VALUE <= ret) && (ret <= Integer.MAX_VALUE)) {
+      return (int) ret;
+    } else {
       return 0;
     }
   }
 
-  public static final long parseLong(String string) {
+  public static int parseIntInternal2(String string) throws NumberFormatException {
+    long ret = StringUtilities.parseLongInternal2(string);
+    if ((Integer.MIN_VALUE <= ret) && (ret <= Integer.MAX_VALUE)) {
+      return (int) ret;
+    } else {
+      return 0;
+    }
+  }
+
+  public static long parseLong(String string) {
     return StringUtilities.parseLongInternal1(string, false);
   }
 
-  public static final long parseLongInternal1(String string, boolean throwException)
+  public static long parseLongInternal1(String string, boolean throwException)
       throws NumberFormatException {
     if (string == null) {
       return 0L;
@@ -690,7 +611,13 @@ public class StringUtilities {
 
     if (multiplier > 1 && StringUtilities.isNumeric(tstring)) {
       try {
-        return Long.parseLong(tstring) * multiplier;
+        long rVal = Long.parseLong(tstring);
+        if ((Long.MIN_VALUE / multiplier <= rVal) && (rVal <= Long.MAX_VALUE / multiplier)) {
+          return rVal * multiplier;
+        } else {
+          RequestLogger.printLine(string + " is out of range, returning 0");
+          return 0;
+        }
       } catch (NumberFormatException e) {
         RequestLogger.printLine(string + " is out of range, returning 0");
         return 0;
@@ -717,7 +644,10 @@ public class StringUtilities {
     return StringUtilities.parseLongInternal2(string);
   }
 
-  public static final long parseLongInternal2(String string) throws NumberFormatException {
+  public static long parseLongInternal2(String string) throws NumberFormatException {
+    if (string == null) {
+      return 0L;
+    }
     string = NONINTEGER_PATTERN.matcher(string).replaceAll("");
 
     if (string.length() == 0) {
@@ -732,7 +662,7 @@ public class StringUtilities {
     }
   }
 
-  public static final float parseFloat(String string) {
+  public static float parseFloat(String string) {
     if (string == null) {
       return 0.0f;
     }
@@ -755,7 +685,7 @@ public class StringUtilities {
     return Float.parseFloat(string);
   }
 
-  public static final double parseDouble(String string) {
+  public static double parseDouble(String string) {
     if (string == null) {
       return 0.0;
     }
@@ -778,21 +708,29 @@ public class StringUtilities {
     return Double.parseDouble(string);
   }
 
-  public static final String basicTextWrap(String text) {
+  public static String basicTextWrap(String text) {
+    return basicTextWrap(text, 80);
+  }
 
-    if (text.length() < 80 || text.startsWith("<html>")) {
+  public static String basicTextWrap(String text, int breakPosition) {
+
+    if (text == null) {
+      return null;
+    }
+
+    if (text.length() < breakPosition || text.startsWith("<html>")) {
       return text;
     }
 
     StringBuilder result = new StringBuilder();
 
     while (text.length() > 0) {
-      if (text.length() < 80) {
+      if (text.length() < breakPosition) {
         result.append(text);
         break;
       }
 
-      int spaceIndex = text.lastIndexOf(" ", 80);
+      int spaceIndex = text.lastIndexOf(" ", breakPosition);
       int breakIndex = text.lastIndexOf("\n", spaceIndex);
 
       if (breakIndex != -1) {
@@ -804,16 +742,16 @@ public class StringUtilities {
         result.append("\n");
         text = text.substring(spaceIndex).trim();
       } else {
-        result.append(text.substring(0, 80).trim());
+        result.append(text.substring(0, breakPosition).trim());
         result.append("\n");
-        text = text.substring(80).trim();
+        text = text.substring(breakPosition).trim();
       }
     }
 
     return result.toString();
   }
 
-  public static final void registerPrepositions(final String text) {
+  public static void registerPrepositions(final String text) {
     Matcher m = StringUtilities.PREPOSITIONS_PATTERN.matcher(text);
     if (!m.find()) {
       return;
@@ -821,7 +759,7 @@ public class StringUtilities {
     StringUtilities.prepositionsMap.put(m.replaceAll("@"), text);
   }
 
-  public static final String lookupPrepositions(final String text) {
+  public static String lookupPrepositions(final String text) {
     Matcher m = StringUtilities.PREPOSITIONS_PATTERN.matcher(text);
     if (!m.find()) {
       return text;
@@ -830,7 +768,15 @@ public class StringUtilities {
     return rv == null ? text : rv;
   }
 
-  public static final String toTitleCase(final String s) {
+  public static Map<String, String> getCopyOfPrepositionsMap() {
+    return new HashMap<>(prepositionsMap);
+  }
+
+  public static void unregisterPrepositions() {
+    prepositionsMap.clear();
+  }
+
+  public static String toTitleCase(final String s) {
     boolean found = false;
     char[] chars = s.toLowerCase().toCharArray();
 
@@ -846,7 +792,7 @@ public class StringUtilities {
     return String.valueOf(chars);
   }
 
-  public static final String leetify(final String text) {
+  public static String leetify(final String text) {
     // It makes no sense to leetify character entities, so convert
     // them to UTF-8 characters.
     String decoded = StringUtilities.getEntityDecode(text);
@@ -887,7 +833,20 @@ public class StringUtilities {
     return b.toString();
   }
 
-  public static final int getBracketedId(final String name) {
+  public static boolean isVowel(char letter) {
+    switch (Character.toLowerCase(letter)) {
+      case 'a':
+      case 'e':
+      case 'i':
+      case 'o':
+      case 'u':
+        return true;
+      default:
+        return false;
+    }
+  }
+
+  public static int getBracketedId(final String name) {
     if (name.startsWith("[")) {
       int index = name.indexOf("]");
       if (index > 0) {
@@ -900,7 +859,7 @@ public class StringUtilities {
     return -1;
   }
 
-  public static final String removeBracketedId(final String name) {
+  public static String removeBracketedId(final String name) {
     if (name.startsWith("[")) {
       int index = name.indexOf("]");
       if (index > 0) {
@@ -954,5 +913,11 @@ public class StringUtilities {
 
   public static List<String> tokenizeString(String s) throws Exception {
     return tokenizeString(s, ',');
+  }
+
+  public static String listToHumanString(List<String> l) {
+    int last = l.size() - 1;
+    if (last == 0) return l.get(last);
+    return String.join(" and ", String.join(", ", l.subList(0, last)), l.get(last));
   }
 }
